# atir-renderer

./: .gitignore  Cargo.toml
src/: assets.rs  main.rs  model.rs  shader.wgsl  state.rs  texture.rs
