[package]
name = "atir-renderer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
bytemuck = { version = "1.4", features = [ "derive" ] }
cgmath = "0.18"
env_logger = "0.9"
pollster = "0.2"
tracing = "0.1"
tracing-subscriber = "0.3"
tobj = { version = "3.2", features = ["async"]}
wgpu = { version = "0.12"}
winit = "0.26"
instant = "0.1"

[dependencies.image]
version = "0.24"
default-features = false
features = ["png", "jpeg"]
